Fix feedback x notification overlap

--- a/components/ui/Notifier/Notifier.module.css
+++ b/components/ui/Notifier/Notifier.module.css
@@ -10,7 +10,7 @@
   max-width: 100vw;
   margin: 0;
   list-style: none;
-  z-index: 1000;
+  z-index: 1001;
   outline: none;
 }
 
